fix dhcp timeout

--- a/roles/provisioner/virsh/tasks/vms.yml
+++ b/roles/provisioner/virsh/tasks/vms.yml
@@ -67,6 +67,7 @@
               --mkdir /root/.ssh \
               --chmod 0700:/root/.ssh \
               --upload /root/.ssh/id_rsa.pub:/root/.ssh/authorized_keys \
+              --delete /etc/dhcp/dhclient.conf \
               --selinux-relabel
           chown qemu:qemu {{ base_image_path }}/{{ base_image }}
 
