--- a/roles/installer/tripleo/undercloud/tasks/setup.yml
+++ b/roles/installer/tripleo/undercloud/tasks/setup.yml
@@ -8,25 +8,25 @@
       line: "{{ ansible_ssh_host }}    {{ inventory_hostname }}.redhat.local {{ inventory_hostname }}"
       state: present
 
-- name: Creating extra repositories
-  yum_repository:
-      name: "{{ item.name }}"
-      state: "{{ item.name | default(omit) }}"
-      file: "{{ item.file| default(omit) }}"
-      description: "{{ item.description | default(omit) }}"
-      baseurl: "{{ item.baseurl | default(omit) }}"
-      mirrorlist: "{{ item.mirrorlist | default(omit) }}"
-      enabled: "{{ item.enabled | default(omit) }}"
-      gpgcheck: "{{ item.gpgcheck | default(omit) }}"
-  with_items: "{{ (installer.extra_repos|default({})).explicit | default([]) }}"
-  when: (installer.extra_repos|default({})).from_config is defined
+#- name: Creating extra repositories
+#  yum_repository:
+#      name: "{{ item.name }}"
+#      state: "{{ item.name | default(omit) }}"
+#      file: "{{ item.file| default(omit) }}"
+#      description: "{{ item.description | default(omit) }}"
+#      baseurl: "{{ item.baseurl | default(omit) }}"
+#      mirrorlist: "{{ item.mirrorlist | default(omit) }}"
+#      enabled: "{{ item.enabled | default(omit) }}"
+#      gpgcheck: "{{ item.gpgcheck | default(omit) }}"
+#  with_items: "{{ (installer.extra_repos|default({})).explicit | default([]) }}"
+#  when: (installer.extra_repos|default({})).from_config is defined
 
-- name: Downloading extra repositories
-  get_url:
-      url: "{{ item }}"
-      dest: /etc/yum.repos.d/
-  with_items: "{{ (installer.extra_repos|default({})).from_url | default([]) }}"
-  when: (installer.extra_repos|default({})).from_url is defined
+#- name: Downloading extra repositories
+#  get_url:
+#      url: "{{ item }}"
+#      dest: /etc/yum.repos.d/
+#  with_items: "{{ (installer.extra_repos|default({})).from_url | default([]) }}"
+#  when: (installer.extra_repos|default({})).from_url is defined
 
 - name: update system packages
   yum:
