--- a/playbooks/installer/tripleo/main.yml
+++ b/playbooks/installer/tripleo/main.yml
@@ -7,13 +7,13 @@
       - backup
   hosts: undercloud
   roles:
-      - role: installer/rhos-release
-        rr_rpm_url: "{{ installer.product.rpm }}"
-        director_version: "{{ installer.product.version }}"
-        director_build: "{{ installer.product.build }}"
-        core_version: "{{ installer.product.core.version }}"
-        core_build: "{{ installer.product.core.build }}"
-        mirror: "{{ installer.mirror | default(omit) }}"
+#      - role: installer/rhos-release
+#        rr_rpm_url: "{{ installer.product.rpm }}"
+#        director_version: "{{ installer.product.version }}"
+#        director_build: "{{ installer.product.build }}"
+#        core_version: "{{ installer.product.core.version }}"
+#        core_build: "{{ installer.product.core.build }}"
+#        mirror: "{{ installer.mirror | default(omit) }}"
 
       - role: installer/tripleo/undercloud
 
