--- a/playbooks/installer/tripleo/virthost.yml
+++ b/playbooks/installer/tripleo/virthost.yml
@@ -3,13 +3,13 @@
   tags: backup
   gather_facts: yes
   roles:
-      - role: installer/rhos-release
-        rr_rpm_url: "{{ installer.product.rpm }}"
-        director_version: "{{ installer.product.version }}"
-        director_build: "{{ installer.product.build }}"
-        core_version: "{{ installer.product.core.version }}"
-        core_build: "{{ installer.product.core.build }}"
-        mirror: "{{ installer.mirror | default(omit) }}"
+      #- role: installer/rhos-release
+      #  rr_rpm_url: "{{ installer.product.rpm }}"
+      #  director_version: "{{ installer.product.version }}"
+      #  director_build: "{{ installer.product.build }}"
+      #  core_version: "{{ installer.product.core.version }}"
+      #  core_build: "{{ installer.product.core.build }}"
+      #  mirror: "{{ installer.mirror | default(omit) }}"
   tasks:
       - name: update /etc/hosts with VMs details
         lineinfile:
@@ -27,6 +27,15 @@
 
 - include: "undercloud-restore.yml"
   when: "'undercloud' not in groups"
+
+- name: Make sure facter is installed
+  hosts: virthost
+  gather_facts: no
+  tasks:
+      - name: Install facter
+        yum:
+            pkg: facter 
+            state: present
 
 # Dumping all facts for later use
 - name: Dumping facts from all nodes for later use
