--- a/roles/installer/tripleo/images/tasks/build.yml
+++ b/roles/installer/tripleo/images/tasks/build.yml
@@ -1,28 +1,30 @@
 ---
-- name: Check if there is a guest image is present
-  tags: backup
-  stat:
-      path: "/home/{{ installer.user.name }}/base_image.qcow2"
-  register: stat_result
+#- name: Check if there is a guest image is present
+#  tags: backup
+#  stat:
+#      path: "/home/{{ installer.user.name }}/base_image.qcow2"
+#  register: stat_result
 
-- name: Download guest image for build if needed
-  get_url:
-      dest: "/home/{{ installer.user.name }}/base_image.qcow2"
-      url: "{{ private.images.base_url }}/rhel-guest-image-latest.qcow2"
-  when: stat_result.stat.exists == False
+#- name: Download guest image for build if needed
+#  get_url:
+#      dest: "/home/{{ installer.user.name }}/base_image.qcow2"
+#      url: "{{ private.images.base_url }}/rhel-guest-image-latest.qcow2"
+#  when: stat_result.stat.exists == False
 
 # TODO: Move environment to a file / template so a user can make customize it
 - name: Build OC images
   tags: backup
-  shell: "source ~/stackrc; openstack overcloud image build --all > openstack-build-images.log"
+  shell: "source ~/stackrc; openstack overcloud image build --all --builder-extra-args rdo-release > openstack-build-images.log"
   environment:
-      DIB_LOCAL_IMAGE: "/home/{{ installer.user.name }}/base_image.qcow2"
-      DIB_YUM_REPO_CONF: "/etc/yum.repos.d/rhos-release-{{ installer.product.version }}-director.repo /etc/yum.repos.d/rhos-release-{{ installer.product.core.version }}.repo /etc/yum.repos.d/rhos-release-{{ ansible_product_version.split() | first | lower }}-{{ ansible_distribution_version }}.repo"
-      NODE_DIST: "rhel7"
-      RHOS: 1
-      RUN_RHOS_RELEASE: 1
-      RHOS_RELEASE: "{{ installer.product.version }}-director"
-      USE_DELOREAN_TRUNK: 0
+      #DIB_LOCAL_IMAGE: "/home/{{ installer.user.name }}/base_image.qcow2"
+      #DIB_YUM_REPO_CONF: "/etc/yum.repos.d/rhos-release-{{ installer.product.version }}-director.repo /etc/yum.repos.d/rhos-release-{{ installer.product.core.version }}.repo /etc/yum.repos.d/rhos-release-{{ ansible_product_version.split() | first | lower }}-{{ ansible_distribution_version }}.repo"
+      #DIB_YUM_REPO_CONF: "/tmp/CentOS-OpenStack-{{ installer.product.version }}.repo"
+      #NODE_DIST: "rhel7"
+      #RHOS: 1
+      #RUN_RHOS_RELEASE: 1
+      #RHOS_RELEASE: "{{ installer.product.version }}-director"
+      RDO_RELEASE: "{{ installer.product.version }}"
+      #USE_DELOREAN_TRUNK: 0
 
 - name: tar our images
   tags: backup
