--- a/playbooks/installer/tripleo/virthost.yml
+++ b/playbooks/installer/tripleo/virthost.yml
@@ -3,14 +3,14 @@
   tags: backup
   gather_facts: yes
   roles:
-      - role: installer/rhos-release
-        rr_rpm_url: "{{ installer.product.rpm }}"
-        director_version: "{{ installer.product.version }}"
-        director_build: "{{ installer.product.build }}"
-        core_version: "{{ installer.product.core.version }}"
-        core_build: "{{ installer.product.core.build }}"
-        rr_distro_version: "{% if installer.product.version|int < 10 %}7.2{% else %}7.3{% endif %}"
-        mirror: "{{ installer.mirror | default(omit) }}"
+#      - role: installer/rhos-release
+#        rr_rpm_url: "{{ installer.product.rpm }}"
+#        director_version: "{{ installer.product.version }}"
+#        director_build: "{{ installer.product.build }}"
+#        core_version: "{{ installer.product.core.version }}"
+#        core_build: "{{ installer.product.core.build }}"
+#        rr_distro_version: "{% if installer.product.version|int < 10 %}7.2{% else %}7.3{% endif %}"
+#        mirror: "{{ installer.mirror | default(omit) }}"
   tasks:
       - name: update /etc/hosts with VMs details
         lineinfile:
