HOTFIX Pin openstacksdk 0.9.8
New openstacksdk 0.9.8 requires higher os-client-config than pinned.

Change-Id: I7c912d426c94ad90f63277fe98aea35021632981

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 setuptools>=11.3
 pytz>=2016.3
+# TODO(yfried): remove this when shade is bumped beyoned 1.7
 os-client-config==1.13.1
+# TODO(yfried): remove this when shade is bumped beyoned 1.7
+openstacksdk==0.9.8
 shade==1.7.0
 ansible==2.1.1
 colorlog>=2.6.1
