install python-lxml on virthost

--- a/settings/provisioner/virsh/virsh.yml
+++ b/settings/provisioner/virsh/virsh.yml
@@ -20,6 +20,7 @@ provisioner:
         - libguestfs
         - libguestfs-tools-c
         - libguestfs-xfs
+        - python-lxml
         - qemu-kvm
         - virt-manager
         - virt-install
